# GentleShare

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.github/workflows/: test.yaml
gentleshare/: __init__.py  filters.py  flask_config.py
gentleshare/classes/: __init__.py  education_level.py  file_storage.py  flash_category.py  subject.py
gentleshare/database/: __init__.py  course.py  file.py  review.py  user.py  user_file_favorite.py
gentleshare/forms/: __init__.py  comment.py  course.py  file.py  inscription.py  login.py  profile.py  register.py  review.py
gentleshare/routes/: __init__.py  auth.py  course.py  errors.py  files.py  front_page.py  list.py  settings.py  static.py  upload.py  user.py
gentleshare/static/css/: base.css  index.css  popup.css  profile.css
gentleshare/static/js/: index.js  profile.js
gentleshare/templates/: _macro.jinja  _tables.jinja  acceuil.jinja  base.jinja  comment_page.jinja  connexion.jinja  course.jinja  create_course.jinja  file_upload.jinja  index.jinja  inscription.jinja  list.jinja  login.jinja  my_courses.jinja  my_file.jinja  private_profile.jinja  profile.jinja  register.jinja  settings.jinja  totp.jinja  upload.jinja
tests/: conftest.py  test_file.py
tests/database/: test_course.py  test_file.py  test_review.py  test_user.py
