[project]
name = "GentleShare"
description = "Default template for PDM package"
authors = [
    { name = "Matthieu LAURENT" },
    { name = "Leonardo HERON" },
    { name = "Quentin SAILLARD" },
    { name = "Loris NIERADKA" },
    { name = "Noé BAIOCCHI" },
]
dependencies = [
    "flask~=3.0",
    "Flask-SQLAlchemy~=3.1",
    "Flask-Login~=0.6",
    "WTForms~=3.1",
    "waitress>=3.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

# Get version from git
dynamic = ["version"]
[tool.pdm.version]
source = "scm"
write_to = "gentleshare/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
lint = ["flake8>=7.0.0", "black>=24.2.0", "mypy>=1.8.0"]
test = ["pytest"]
doc = ["pdoc>=14.4.0", "docstr-coverage>=2.3.0"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "waitress-serve --port=5000 --call gentleshare:create_app"
