[project]
name = "GentleShare"
description = ""
authors = [
    { name = "Matthieu LAURENT" },
    { name = "Leonardo HERON" },
    { name = "Quentin SAILLARD" },
    { name = "Loris NIERADKA" },
    { name = "Noé BAIOCCHI" },
]
dependencies = [
    "flask~=3.0",
    "Flask-SQLAlchemy~=3.1",
    "Flask-Login~=0.6",
    "WTForms~=3.1",
    "waitress~=3.0",
    "loguru~=0.7",
    "sqlalchemy-file~=0.6",
    # Required by sqlalchemy-file
    "fasteners~=0.19",
    "humanize~=4.9",
    "pyotp~=2.9",
    "Flask-QRcode~=3.1",
    "flask-wtf~=1.2",
    "markdown~=3.6",
    "beautifulsoup4~=4.12",
    "markdown-mark~=0.0",
    "pymdown-extensions~=10.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

# Get version from git
dynamic = ["version"]
[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=7.0.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "isort~=5.13",
    "docstr-coverage>=2.3.0",
]
test = ["pytest"]
doc = ["pdoc>=14.4.0"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "waitress-serve --port=8080 --call gentleshare:create_app"
debug = "flask --app gentleshare:create_app --debug run --host=localhost --port=5000 --reload --debugger"
lint = """bash -c ' \
echo "================ Sorting imports =================" && \
isort gentleshare/ && \
echo "============== Formating with black ==============" && \
black gentleshare/ && \
echo "============== Checking with flake8 ==============" && \
flake8 gentleshare/' \
"""
test = "pytest tests/"

# Tools configs
[tool.isort]
profile = "black"
